Closed Bug 87202 Opened 23 years ago Closed 23 years ago

mailtourl does not support non-ASCII/non-MIME encoded header or body

Categories

(MailNews Core :: Internationalization, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.3

People

(Reporter: momoi, Assigned: nhottanscp)

References

()

Details

(Keywords: intl, Whiteboard: nsbranch+,pdt+)

Attachments

(1 file)

** Observed with 6/21/2001 Win 32 build **
** This bug was split from Bug 12851. **

The above page, Netscape's Technology Evangelism Home
Page originally contained Japanese feedback pre-filled
subject line for mailtourl. I had to put in a Latin
transliteration because Mozilla does not support
non-ASCII string for header or body text for mailtourl.

In Comm 4.x, it was supported. I think we should at 
least get back to parity with 4.x.
In addition, MIME-encoded header & body should
be supported according to RFC 2368. But that is covered 
in another Bug 12851.
Keywords: 4xp, intl
I used diff -uw for the patch.
Keywords: nsBranch
Target Milestone: --- → mozilla0.9.3
Naoki, what's the risk to breaking existing ascii mailto urls that run through
that piece of compose code that you modified to change from
NS_ConvertASCIIToUCS2 to NS_ConvertUTF8ToUCS2? i.e. is that change opening us to
breaking something else?

If the answer is no then sr=mscott. Please get a reviewer from the layout group
to ok the nsHTMLUtils.cpp change.
ASCII URIs are not affected by the change.
I will ask jst to also review.
Looks good to me r=jst

(I'd complain about the odd indentation in the mailnews file, but since that
file is an indentation nightmare (it has tabs all over, n' so on) I won't bother :-)
r=ftang
check it in.
Whiteboard: need a=
Whiteboard: need a= → r=ftang sr=jst
land to trunk first and keep this bug open for moz0.9.2 landing.
Blocks: 60178
Summary: mailtourl does not support non-ASCII/non-MIME encoded header or bofy → mailtourl does not support non-ASCII/non-MIME encoded header or body
checked in to the trunk
adding vtrunk keyword to indicate the bug has been fixed on the trunk.  Bug left
open for tracking checkin to branch (nsbranch) when appropriate.

Once bug has been fixed on the branch also, pls remove vtrunk keyword.
Keywords: vtrunk
tested in mtrunk 07-03-04 build, it is fixed
mark it as vtrunk+ in staus 
Whiteboard: r=ftang sr=jst → r=ftang sr=jst, vtrunk+
Whiteboard: r=ftang sr=jst, vtrunk+ → nsbranch+
pdt+ per pdt meting. Land it today
Whiteboard: nsbranch+ → nsbranch+,pdt+
land into m92 branch.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified with 07/06 windows, mac and linux branch builds. It's working for both 
subject and mail body in latin-1 or Japanese.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: