In nsHTMLUtils.cpp changed to create UTF-8 URI instead of a document charset, in mailnews changed ASCII conversion to UTF-8, bug 87202, r=ftang, sr=jst.